# cosmos

./: .gitignore  CLAUDE.md  LICENSE.md  README.ko.md  README.md  cosmos.config.example.json
contract/: CONTRACT.md  openapi.yaml
core/: Cargo.toml  RESULTS.md
core/src/: bm25.rs  chunk.rs  cluster.rs  embed.rs  frontmatter.rs  fuse.rs  journal.rs  lib.rs  main.rs  parse.rs  rerank.rs  serve.rs  vector.rs  wikilinks.rs
core/src/engine/: branches.rs  clusters.rs  graph.rs  ingest.rs  lifecycle.rs  listing.rs  mod.rs  rollback.rs  search.rs  tests.rs
core/src/store/: branches.rs  chunks.rs  clusters.rs  docs.rs  entities.rs  events.rs  links.rs  mod.rs  tests.rs
deploy/: .env.example  Dockerfile.core  Dockerfile.mind  README.md  deploy.sh  docker-compose.yml  sync_data.sh
docs/: PLAN.md  SETUP.md  TEAM-KNOWLEDGE.md
mcp/: README.md  RESULTS.md  package-lock.json  package.json  tsconfig.json
mcp/src/: index.ts  mind-client.ts
mind/: README.md  RESULTS.md  package-lock.json  package.json
mind/src/: admin-console.test.ts  ask.test.ts  ask.ts  asklog.test.ts  asklog.ts  bootstrap.ts  cli.test.ts  cli.ts  collect.test.ts  collect.ts  config.ts  core-client.ts  cron.test.ts  cron.ts  deep.test.ts  deep.ts  digest.test.ts  digest.ts  envelope.test.ts  envelope.ts  global.test.ts  global.ts  guard.test.ts  guard.ts  inbox.test.ts  inbox.ts  intent.test.ts  intent.ts  invite.test.ts  invite.ts  json-extract.test.ts  llm.ts  (+23 more)
tools/: README.md  RESULTS.md  collect_seed.mjs  eval_ask.mjs  eval_deep.mjs  eval_m2.mjs  eval_search.mjs  invite.ps1  sync-hub.ps1  try.mjs
(+26 files in other folders)
